# udb

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  TODO  babel.cfg  pyproject.toml  setup.cfg  setup.py  snippet.py  sonar-project.properties  test.py  tox.ini
debian/: .gitignore  changelog  control  copyright  rules  udb.conf  udb.install  udb.links  udb.postinst  udb.service
debian/manpages/: udb.1
debian/tests/: control  smoke
debian/upstream/: metadata
doc/: conf.py  configuration-ldap.md  configuration.md  development.md  hardening.md  index.rst  installation.md  networking.md
src/: test.py
src/cmdb/: __init__.py  app.py  config.py  db.py  i18n.py  jinja2.py  main.py  model.py
src/cmdb/controller/: __init__.py  api.py  common.py  dnszone.py  fields.py  login.py  logout.py  network.py  wtf.py
src/cmdb/controller/static/: __init__.py
src/cmdb/controller/tests/: __init__.py  test_index.py  test_login.py  test_logout.py  test_network.py  test_static.py
src/cmdb/core/: model.py  passwd.py  store.py
src/cmdb/core/model/: __init__.py  _common.py  _item.py  _network.py  _user.py
src/cmdb/core/tests/: test_passwd.py
src/cmdb/store/: __init__.py
src/cmdb/templates/: common-edit.html  common-followers.html  common-list.html  common-messages.html  common-new.html  dnszone-edit.html  dnszone-new.html  dnszone.html  flash.html  followers.html  index.html  layout.html  login.html  macro.html  messages.html  navbar.html
src/cmdb/tests/: test_app.py  test_config.py
src/cmdb/tools/: auth_basic.py  auth_form.py  currentuser.py  db.py  formauth.py  jinja2.py  security.py
src/udb/: __init__.py  app.py  config.py  main.py
src/udb/controller/: __init__.py  api.py  audit_page.py  common.py  common_page.py  dashboard_page.py  deployment_page.py  dhcprecord_page.py  dnsrecord_page.py  dnszone_page.py  environment_page.py  fields.py  form.py  ip_page.py  language.py  load_page.py  login.py  login_page.py  logout_page.py  mac_page.py  mfa_page.py  network.py  network_page.py  notifications_page.py  profile_mfa_page.py  profile_page.py  rule_page.py  search_page.py  subnet_page.py  user_page.py  vrf_page.py  wtf.py
src/udb/controller/static/: __init__.py  main.css  main.js  table.js
src/udb/controller/tests/: __init__.py  test_api.py  test_audit_page.py  test_check_links.py  test_common_page.py  test_controller.py  test_dashboard_page.py  test_deployment_page.py  test_dhcprecord_page.py  test_dnsrecord_page.py  test_dnszone_page.py  test_environment_page.py  test_error_page.py  test_i18n.py  test_index_page.py  test_ip_page.py  (+22 more)
src/udb/core/: login.py  notification.py  passwd.py
src/udb/locales/: messages.pot
src/udb/plugins/: ldap.py  scheduler.py  smtp.py
src/udb/templates/: common-edit.html  common-filter.html  common-followers.html  common-list.html  common-messages.html  common-new.html  common-status.html  dashboard.html  email_layout.html  email_notification.html  error_page.html  flash.html  layout.html  load.html  login.html  macro.html  mfa.html  navbar.html  notifications.html  profile.html  profile_mfa.html  search.html  table_lang.json
src/udb/tests/: test_config.py  test_main.py
src/udb/tools/: auth_basic.py  auth_form.py  auth_mfa.py  currentuser.py  db.py  errors.py  i18n.py  jinja2.py  ratelimit.py  secure_headers.py  security.py
(+111 files in other folders)
