[metadata]
name = udb
description = Web application used to manage records to configure enterprise network with ansible-playbook.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://gitlab.com/ikus-soft/udb
author=Patrik Dufresne
author_email=patrik@ikus-soft.com
license = GPLv3
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: CherryPy

[options]
packages = find_namespace:
package_dir = 
    =src
include_package_data = True
install_requires = 
    apscheduler
    babel
    CherryPy>18
    configargparse
    email_validator
    Jinja2
    ldap3
    requests
    ujson
    sqlalchemy>=1.4,<1.5
    validators
    WTForms>=2.2.1
    zxcvbn>=4.4.27
setup_requires = 
    setuptools_scm
python_requires = >=3.6, <4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    udb = udb.main:main

[options.extras_require]
test = 
    html5lib
    parameterized
    pytest
    response
    selenium

[extract_messages]
keywords = _ gettext ngettext
mapping_file = babel.cfg
output-file = src/udb/locales/messages.pot
input-dirs = src
width = 80

[init_catalog]
domain = messages
input-file = src/udb/locales/messages.pot
output-dir = src/udb/locales

[update_catalog]
domain = messages
input-file = src/udb/locales/messages.pot
output-dir = src/udb/locales

[compile_catalog]
domain = messages
directory = src/udb/locales